--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,8 @@
 <resources>
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="text_14">14sp</dimen>
+    <dimen name="margin_padding_10">10dp</dimen>
+    <dimen name="text_18">18sp</dimen>
+    <dimen name="margin_padding_16">16dp</dimen>
 </resources>
